# teral

./: Cargo.toml  README.md  rustfmt.toml  teral.toml
.github/workflows/: rust.yml
src/: errors.rs  main.rs  validator.rs
src/chain/: mod.rs
src/config/: mod.rs
src/contracts/: language.rs  language_compiler.rs  mod.rs  native.rs
src/contracts/compiler/: lexer.rs  mod.rs  tests.rs
src/p2p/: mod.rs
src/storage/: mod.rs
src/validator/: leader_schedule.rs  mod.rs
