[package]
name = "teral"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
serde_json = "1"
serde_derive = "1"
serde = "1"
toml = "0.5"

anyhow = "1"
bincode = "1.3"
rayon = "1.5"
rand = "0.8"

sha3 = "0.10"
chrono = "0.4"
ed25519-consensus = "1.2"
rhai = { version = "1.5", features = ["serde"] }

rocksdb = { version = "0.17", optional = true }

[features]
default = [ "rocksdb-backend" ]
rocksdb-backend = [ "rocksdb" ]
