[package]
name = "teral"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"

serde_json = "1"
serde_derive = "1"
serde = "1"
toml = "0.5"
anyhow = "1"
thiserror = "1.0"

bincode = "1.3"
rayon = "1.5"
rand = "0.8"

sha3 = "0.10"
chrono = "0.4"
ed25519-consensus = "2.0"
rhai = { version = "1.6", features = [ "serde", "no_float", "no_closure", "no_module" ] }

rocksdb = { version = "0.18", optional = true }

[[bin]]
name = "validator"
path = "src/main.rs"

[features]
default = [ "rocksdb-backend" ]
rocksdb-backend = [ "rocksdb" ]
