[package]
name = "teral"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"

serde_json = "1"
serde_derive = "1"
serde = "1"
toml = "0.5"
thiserror = "1.0"
serial_test = "0.6.0"

bincode = "1.3"
primitive-types = "0.11"
rayon = "1.5"
rand = "0.8"

base64 = "0.13"
sha3 = "0.10"
chrono = "0.4"
ed25519-consensus = "2.0"

wat = "1.0"
wasmer = { version = "2.2", features = [ "default-singlepass", "default-universal", "wat" ], default-features = false }
rocksdb = { version = "0.18", optional = true }

[[bin]]
name = "validator"
path = "src/main.rs"

[features]
default = [ "rocksdb-backend" ]
rocksdb-backend = [ "rocksdb" ]
